# seensnap

./: .gitignore  README.md
Original Pitch Materials/: SeenSnap_Figma_Ready_Screen_List.xlsx  SeenSnap_User_Journey_with_Revenue_Timeline.xlsx
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260307_0001_initial_schema.py  20260308_0002_feed_schema.py  20260308_0003_watch_teams_schema.py  20260308_0004_watchlist_lists.py  20260501_0005_taste_graph.py  20260501_0006_swipe_records.py
apps/api/app/: main.py
apps/api/app/api/: dependencies.py  router.py
apps/api/app/api/routes/: auth.py  feed.py  me.py  notifications.py  profiles.py  shares.py  snips.py  teams.py  titles.py  watchlist.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: content.py  social.py  taste.py  user.py
apps/api/app/schemas/: auth.py  content.py  feed.py  notification.py  share.py  snip.py  taste.py  team.py  user.py  watchlist.py
apps/api/app/services/: activity.py  auth.py  compatibility.py  demo.py  demo_feed_seed.py  feed.py  follows.py  shares.py  taste.py  teams.py  tmdb.py  watchlists.py  wikipedia.py
apps/mobile/: app.json  package-lock.json  package.json  tsconfig.json
docs/: api-surface.md  architecture.md  auth-google.md  gcp-environment.md  milestones.md
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: run-api-local.sh  seed-demo-feed.sh  setup-local-db.sh  start-local-api.sh
(+29 files in other folders)
